--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -19,7 +19,7 @@
                 <div ng-include="'templates/side-panel-menu.html'"></div>
             </div>
             <div class="row home-menu" ng-controller="navigation">
-                <span ng-repeat="category in navMenu">
+                <span ng-repeat="category in navMenu" ng-if="category.menu.length > 0">
                     <div class="col-xs-12 col-md-6">
                         <div class="row">
                             <div class="col-xs-12">
