--- a/templates/side-panel-menu.html
+++ b/templates/side-panel-menu.html
@@ -10,7 +10,7 @@
         </div>
     </div>
     <div id="side-panel-scroll" class="row side-panel-scroll">
-        <div ng-repeat="category in navMenu">
+        <div ng-repeat="category in navMenu" ng-if="category.menu.length > 0">
             <div class="clearfix">
                 <div class="side-menu-title">
                     <div style="height: 10px; border-bottom: 1px solid #6f5499;">
