OPAL-261 - fixed missing texts

--- a/templates/custom-code/add.custom.code.html
+++ b/templates/custom-code/add.custom.code.html
@@ -164,7 +164,7 @@
                         <div class="mobile-summary col-xs-12 col-sm-offset-1 col-sm-6">
                             <div class="summary-title" style="text-align: right; margin-bottom: 5px;">
                                 <span style="padding: 0 10px;">
-                                    <h2>{{'CUSTOM_CODE.ADD.STEP'|translate}} {{completedSteps}} {{'CUSTOM_CODE.ADD.OF'|translate}} {{stepTotal}} {{'CUSTOM_CODE.ADD.COMPLETED'|translate}}</h2>
+                                    <h2>{{'CUSTOM_CODE.ADD.STEP'|translate}} {{completedSteps}} {{'CUSTOM_CODE.ADD.OF'|translate}} {{totalSteps}} {{'CUSTOM_CODE.ADD.COMPLETED'|translate}}</h2>
                                 </span>
                             </div>
                             <div class="progress progress-striped active">
