--- a/templates/role/add.role.html
+++ b/templates/role/add.role.html
@@ -142,7 +142,7 @@
                         <div class="mobile-summary col-xs-12 col-sm-offset-1 col-sm-6">
                             <div class="summary-title" style="text-align: right; margin-bottom: 5px;">
                                 <span style="padding: 0 10px;">
-                                    <h2>{{'ROLE.ADD.STEP'|translate}} {{completedSteps}} {{'ROLE.ADD.OF'|translate}} {{stepTotal}} {{'ROLE.ADD.COMPLETED'|translate}}</h2>
+                                    <h2>{{'ROLE.ADD.STEP'|translate}} {{completedSteps}} {{'ROLE.ADD.OF'|translate}} {{totalSteps}} {{'ROLE.ADD.COMPLETED'|translate}}</h2>
                                 </span>
                             </div>
                             <div class="progress progress-striped active">
