--- a/templates/study/add.study.html
+++ b/templates/study/add.study.html
@@ -173,7 +173,7 @@
                         <div class="mobile-summary col-xs-12 col-sm-offset-1 col-sm-6">
                             <div class="summary-title" style="text-align: right; margin-bottom: 5px;">
                                 <span style="padding: 0 10px;">
-                                    <h2>{{'STUDY.ADD.STEP'|translate}} {{completedSteps}} {{'STUDY.ADD.OF'|translate}} {{stepTotal}} {{'STUDY.ADD.COMPLETED'|translate}}</h2>
+                                    <h2>{{'STUDY.ADD.STEP'|translate}} {{completedSteps}} {{'STUDY.ADD.OF'|translate}} {{totalSteps}} {{'STUDY.ADD.COMPLETED'|translate}}</h2>
                                 </span>
                             </div>
                             <div class="progress progress-striped active">
