--- a/templates/alert/add.alert.html
+++ b/templates/alert/add.alert.html
@@ -92,8 +92,36 @@
                                 </uib-accordion-heading>
                                 <div ng-if="toSubmit.trigger" class="description">
                                     <p style="margin-bottom:0;" ng-show="toSubmit.trigger">
-                                        <b>{{'ALERT.ADD.TRIGGERS'|translate}}:</b> {{toSubmit.trigger}}
+                                        <b>{{'ALERT.ADD.SEE_TRIGGERS'|translate}}</b>
                                     </p>
+                                </div>
+                            </div>
+                            <!-- SECTION: Contact -->
+                            <div uib-accordion-group is-open="leftMenu.contact.open" class="panel-container summary-box" is-disabled="!validator.contact.completed" ng-if="toSubmit.contact.phone.length > 0 || toSubmit.contact.email.length > 0">
+                                <uib-accordion-heading>
+                                    <div class="row" style="align-items: center">
+                                        <div class="col-md-2">
+                                            <span ng-if="validator.contact.completed" style="color:#5cb85c" class="glyphicon glyphicon-ok"></span>
+                                        </div>
+                                        <div class="col-md-8">
+                                            <strong>{{'ALERT.ADD.CONTACTS'|translate}}</strong>
+                                        </div>
+                                        <div class="col-md-2">
+                                            <i ng-if="validator.contact.completed" class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': leftMenu.contact.open, 'glyphicon-chevron-right': !leftMenu.contact.open}"></i>
+                                        </div>
+                                    </div>
+                                </uib-accordion-heading>
+                                <div ng-if="toSubmit.contact.phone.length > 0" class="description">
+                                    <p style="margin-bottom:0;" ng-show="toSubmit.contact.phone.length > 0">
+                                        <b>{{'ALERT.ADD.PHONE'|translate}}</b>
+                                    </p>
+                                    <ul><li ng-repeat="phone in toSubmit.contact.phone track by $index">{{phone.num}}</li></ul>
+                                </div>
+                                <div ng-if="toSubmit.contact.email.length > 0" class="description">
+                                    <p style="margin-bottom:0;" ng-show="toSubmit.contact.phone.length > 0">
+                                        <b>{{'ALERT.ADD.EMAIL'|translate}}</b>
+                                    </p>
+                                    <ul><li ng-repeat="email in toSubmit.contact.email track by $index">{{email.adr}}</li></ul>
                                 </div>
                             </div>
                         </uib-accordion>
@@ -142,7 +170,7 @@
                         <div class="mobile-summary col-xs-12 col-sm-offset-1 col-sm-6">
                             <div class="summary-title" style="text-align: right; margin-bottom: 5px;">
                                 <span style="padding: 0 10px;">
-                                    <h2>{{'ALERT.ADD.STEP'|translate}} {{completedSteps}} {{'ALERT.ADD.OF'|translate}} {{stepTotal}} {{'ALERT.ADD.COMPLETED'|translate}}</h2>
+                                    <h2>{{'ALERT.ADD.STEP'|translate}} {{completedSteps}} {{'ALERT.ADD.OF'|translate}} {{totalSteps}} {{'ALERT.ADD.COMPLETED'|translate}}</h2>
                                 </span>
                             </div>
                             <div class="progress progress-striped active">
@@ -245,8 +273,8 @@
                             </div>
                         </div>
                         <!-- END SECTION -->
-                        <!-- SECTION: contacts -->
 
+                        <!-- SECTION: contacts -->
                         <div class="row" ng-if="validator.trigger.completed">
                             <div class="col-xs-12 side-menu-title">
                                 <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
@@ -255,51 +283,68 @@
                                     </span>
                                 </div>
                             </div>
-                        </div>
-                        <div class="row" ng-if="validator.trigger.completed">
                             <div class="col-xs-12">
                                 <p style="margin-bottom: 5px;">
                                     <span style="color:#d9534f"><strong>{{'ALERT.ADD.REQUIRED'|translate}}</strong></span>
                                     {{'ALERT.ADD.CONTACTS_EXPLANATION'|translate}}
                                 </p>
                             </div>
-                        </div>
-                        <div class="row" ng-repeat="toc in newEduMat.tocs" style="margin-bottom: 7px;">
                             <div class="col-xs-12 col-md-6">
-                                <div class="panel" ng-class="(toc.name_EN) ? 'panel-success' : 'panel-danger'">
-                                    <div class="panel-heading"><strong>{{'ALERT.ADD.ENGLISH_ORDER'|translate}} {{toc.order}}</strong>
-                                        <span style="float:right; cursor:pointer; margin-left:10px;" ng-click="removeTOC(toc.order)" class="glyphicon glyphicon-remove"></span></span>
-                                        <span ng-hide="toc.name_EN" style="float:right;"><em>{{'ALERT.ADD.INCOMPLETE'|translate}}</em></span>
-                                        <span ng-show="toc.name_EN" style="float:right;"><em>{{'ALERT.ADD.COMPLETE'|translate}}</em></span>
+                                <div class="panel" ng-if="validator.trigger.completed && toSubmit.contact.phone.length > 0" ng-class="(validator.contact.phone.completed) ? 'panel-success' : 'panel-danger'">
+                                    <div class="panel-heading"><strong>{{'ALERT.ADD.PHONE'|translate}} {{phone.num}}</strong>
+                                        <span ng-hide="validator.contact.phone.completed" style="float:right;"><em>{{'ALERT.ADD.INCOMPLETE'|translate}}</em></span>
+                                        <span ng-show="validator.contact.phone.completed" style="float:right;"><em>{{'ALERT.ADD.COMPLETE'|translate}}</em></span>
                                     </div>
                                     <div class="panel-body form-horizontal">
                                         <div class="form-group">
-                                            <label class="control-label col-xs-12 col-lg-2">
-                                                {{'ALERT.ADD.TITLE_2'|translate}}
-                                            </label>
-                                            <div class="col-xs-12 col-lg-10">
-                                                <input class="form-control" type="text" ng-change="tocUpdate()" ng-model="toc.name_EN" placeholder="{{'ALERT.ADD.ENGLISH_TITLE'|translate}}" required="required">
+                                            <div class="col-xs-12 "  >
+                                                <div class="input-group" style="margin-top:5px; margin-bottom:5px;" ng-repeat="phone in toSubmit.contact.phone track by $index">
+                                                    <input class="form-control" type="text" ng-model="phone.num" placeholder="{{'ALERT.ADD.PHONE_EX'|translate}}" required="required">
+                                                    <span class="input-group-btn">
+                                                    <button class="btn btn-default" ng-click="removePhone($index)"><span class="fa fa-minus"></span> {{'ALERT.ADD.REMOVE'|translate}}</button>
+                                                    </span>
+
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
+                                <div class="row animated">
+                                    <div class="col-xs-3">
+                                        <div style="display: table;"><button type="button" class="btn btn-default" style="float: left; margin-top:5px;" ng-click="addPhone();"><span class="fa fa-plus"></span> {{'ALERT.ADD.ADD_PHONE'|translate}}</button></div>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                        <div class="row animated" ng-class="{fadeInUp:tocsSection.show}" ng-if="tocsSection.show">
-                            <div class="col-xs-3 col-md-2">
-                                <div class="panel-container animated" style="cursor:pointer;" ng-class="{pulse: hoverJ}" ng-click="addTOC()" ng-mouseenter="hoverJ=true" ng-mouseleave="hoverJ=false">
-                                    <div class="panel-info">
-                                        <div class="panel-content" style="text-align:center">
-                                            <span style="font-size:30px;" class="glyphicon glyphicon-plus"></span>
-                                            <div class="option-panel-title">{{'ALERT.ADD.ADD'|translate}}</div>
+                            <div class="col-xs-12 col-md-6">
+                                <div class="panel" ng-if="validator.trigger.completed && toSubmit.contact.email.length > 0" ng-class="(validator.contact.email.completed) ? 'panel-success' : 'panel-danger'">
+                                    <div class="panel-heading"><strong>{{'ALERT.ADD.EMAIL'|translate}} {{email.adr}}</strong>
+                                        <span ng-hide="validator.contact.email.completed" style="float:right;"><em>{{'ALERT.ADD.INCOMPLETE'|translate}}</em></span>
+                                        <span ng-show="validator.contact.email.completed" style="float:right;"><em>{{'ALERT.ADD.COMPLETE'|translate}}</em></span>
+                                    </div>
+                                    <div class="panel-body form-horizontal">
+                                        <div class="form-group">
+                                            <div class="col-xs-12 "  >
+                                                <div class="input-group" style="margin-top:5px; margin-bottom:5px;" ng-repeat="email in toSubmit.contact.email track by $index">
+                                                    <input class="form-control" type="email" ng-model="email.adr" placeholder="{{'ALERT.ADD.EMAIL_EX'|translate}}" required="required">
+                                                    <span class="input-group-btn">
+                                                    <button class="btn btn-default" ng-click="removeEmail($index)"><span class="fa fa-minus"></span> {{'ALERT.ADD.REMOVE'|translate}}</button>
+                                                    </span>
+
+                                                </div>
+                                            </div>
                                         </div>
+                                    </div>
+                                </div>
+                                <div class="row animated">
+                                    <div class="col-xs-3">
+                                        <div style="display: table;"><button type="button" class="btn btn-default" style="float: left; margin-top:5px;" ng-click="addEmail();"><span class="fa fa-plus"></span> {{'ALERT.ADD.ADD_EMAIL'|translate}}</button></div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        
-                        
-                        
+
+
+
                         <!-- END SECTION -->
                     </div>
                 </div>
