--- a/templates/alert/edit.alert.html
+++ b/templates/alert/edit.alert.html
@@ -7,88 +7,88 @@
         </h2>
     </div>
     <div class="modal-buttons col-xs-12 col-md-6">
-        <form method="post" ng-submit="updateCustomCode()">
-            <input ng-if="!locked" class="btn btn-primary submit" ng-class="{'disabled': (!formReady || !changesDetected)}" type="submit" value="{{'ALERT.EDIT.SAVE'|translate}}">
+        <form method="post" ng-submit="updateAlert()">
+            <input class="btn btn-primary submit" ng-class="{'disabled': (!formReady || !changesDetected)}" type="submit" value="{{'ALERT.EDIT.SAVE'|translate}}">
             <input ng-click="cancel()" class="btn btn-danger cancel" type="button" value="{{'ALERT.EDIT.CANCEL'|translate}}">
         </form>
     </div>
 </div>
 <div class="modal-body">
     <uib-accordion close-others="false">
-        <!-- SECTION: Titles -->
-        <div uib-accordion-group is-open="titleSection.open">
+        <!-- SECTION: Message -->
+        <div uib-accordion-group is-open="titleMessage.open">
             <uib-accordion-heading>
                 <div>
-                    <strong>{{'ALERT.EDIT.DETAILS'|translate}}</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': titleSection.open, 'glyphicon-chevron-right': !titleSection.open}"></i>
+                    <strong>{{'ALERT.EDIT.MESSAGE'|translate}}</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': titleMessage.open, 'glyphicon-chevron-right': !titleMessage.open}"></i>
                 </div>
             </uib-accordion-heading>
             <div class="row">
                 <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
                     <div class="input-group">
-                        <span class="input-group-addon">{{'ALERT.EDIT.ALERT_ID'|translate}}</span>
-                        <input ng-disabled="locked" class="form-control" type="text" ng-model="toSubmit.details.code" ng-change="detailsUpdate()" required="required" />
+                        <span class="input-group-addon">{{'ALERT.EDIT.SUBJECT'|translate}}</span>
+                        <input class="form-control" type="text" ng-model="toSubmit.message.subject" ng-change="messageUpdate()" required="required" />
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
                     <div class="input-group">
-                        <span class="input-group-addon">{{'ALERT.EDIT.TITLE_2'|translate}}</span>
-                        <input ng-disabled="locked" class="form-control" type="text" ng-model="toSubmit.details.title" ng-change="detailsUpdate()" required="required" />
+                        <span class="input-group-addon">{{'ALERT.EDIT.BODY'|translate}}</span>
+                        <input class="form-control" type="text" ng-model="toSubmit.message.body" ng-change="messageUpdate()" required="required" />
                     </div>
                 </div>
             </div>
         </div>
-        <!-- SECTION: Principal Investigator -->
-        <div uib-accordion-group is-open="investigatorSection.open">
+        <!-- SECTION: Trigger -->
+        <div uib-accordion-group is-open="triggerSection.open">
             <uib-accordion-heading>
                 <div>
-                    <strong>{{'ALERT.EDIT.INVESTIGATOR'|translate}}</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': investigatorSection.open, 'glyphicon-chevron-right': !investigatorSection.open}"></i>
+                    <strong>{{'ALERT.EDIT.TRIGGERS_LIST'|translate}}</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': triggerSection.open, 'glyphicon-chevron-right': !triggerSection.open}"></i>
                 </div>
             </uib-accordion-heading>
             <div class="row">
                 <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
                     <div class="input-group">
-                        <span class="input-group-addon">{{'ALERT.EDIT.NAME'|translate}}</span>
-                        <input class="form-control" type="text" ng-model="toSubmit.investigator.name" ng-change="nameUpdate()" required="required" />
+                        <span class="input-group-addon">{{'ALERT.EDIT.TRIGGERS'|translate}}</span>
+                        <input class="form-control" type="text" ng-model="toSubmit.trigger" ng-change="triggerUpdate()" required="required" />
                     </div>
                 </div>
             </div>
         </div>
-        <!-- SECTION: Dates -->
-        <div uib-accordion-group is-open="datesSection.open">
+        <!-- SECTION: Contact -->
+        <div uib-accordion-group is-open="contactSection.open">
             <uib-accordion-heading>
                 <div>
-                    <strong>{{'ALERT.EDIT.DATES'|translate}}</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': datesSection.open, 'glyphicon-chevron-right': !datesSection.open}"></i>
+                    <strong>{{'ALERT.EDIT.CONTACTS'|translate}}</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': contactSection.open, 'glyphicon-chevron-right': !contactSection.open}"></i>
                 </div>
             </uib-accordion-heading>
             <div class="row">
-                <div class="col-xs-12 col-sm-4">
-                    <div class="form-horizontal">
+                <div class="col-xs-12 col-md-6">
+                    <div class="panel-body form-horizontal" ng-if="toSubmit.contact.phone.length > 0">
                         <div class="form-group">
-                            <label class="control-label col-xs-12">
-                                {{'ALERT.EDIT.START_DATE'|translate}}
-                            </label>
-                            <div class="col-xs-12 col-lg-9">
-                                <div class="input-group">
-                                    <input type="text" maxlength="10" class="form-control" uib-datepicker-popup="{{format}}" ng-model="toSubmit.dates.start_date" is-open="popupStart.opened" datepicker-options="dateOptionsStart" ng-required="true" close-text="{{'DATEPICKER.CLOSE'|translate}}" current-text="{{'DATEPICKER.TODAY'|translate}}" clear-text="{{'DATEPICKER.RESET'|translate}}" />
-                                    <span class="input-group-btn"><button class="btn btn-default" ng-click="openStart($event)"><i class="glyphicon glyphicon-calendar"></i></button></span>
+                            <div class="col-xs-12 ">
+                                <div class="input-group" style="margin-top:5px; margin-bottom:5px;" ng-repeat="phone in toSubmit.contact.phone track by $index">
+                                    <input class="form-control" type="text" ng-model="phone.num" placeholder="{{'ALERT.EDIT.PHONE_EX'|translate}}" required="required">
+                                    <span class="input-group-btn"><button class="btn btn-default" ng-click="removePhone($index)"><span class="fa fa-minus"></span> {{'ALERT.EDIT.REMOVE'|translate}}</button></span>
                                 </div>
                             </div>
                         </div>
                     </div>
+                    <div class="col-xs-3">
+                        <div style="display: table;"><button type="button" class="btn btn-default" style="float: left; margin-top:5px;" ng-click="addPhone();"><span class="fa fa-plus"></span> {{'ALERT.EDIT.ADD_PHONE'|translate}}</button></div>
+                    </div>
                 </div>
-                <div class="col-xs-12 col-sm-4">
-                    <div class="form-horizontal">
+                <div class="col-xs-12 col-md-6">
+                    <div class="panel-body form-horizontal" ng-if="toSubmit.contact.email.length > 0">
                         <div class="form-group">
-                            <label class="control-label col-xs-12">
-                                {{'ALERT.EDIT.END_DATE'|translate}}
-                            </label>
-                            <div class="col-xs-12 col-lg-9">
-                                <div class="input-group">
-                                    <input type="text" maxlength="10" class="form-control" uib-datepicker-popup="{{format}}" ng-model="toSubmit.dates.end_date" is-open="popupEnd.opened" datepicker-options="dateOptionsEnd" ng-required="true" close-text="{{'DATEPICKER.CLOSE'|translate}}" current-text="{{'DATEPICKER.TODAY'|translate}}" clear-text="{{'DATEPICKER.RESET'|translate}}" />
-                                    <span class="input-group-btn"><button class="btn btn-default" ng-click="openEnd($event)"><i class="glyphicon glyphicon-calendar"></i></button></span>
+                            <div class="col-xs-12 ">
+                                <div class="input-group" style="margin-top:5px; margin-bottom:5px;" ng-repeat="email in toSubmit.contact.email track by $index">
+                                    <input class="form-control" type="email" ng-model="email.adr" placeholder="{{'ALERT.EDIT.EMAIL_EX'|translate}}" required="required">
+                                    <span class="input-group-btn"><button class="btn btn-default" ng-click="removeEmail($index)"><span class="fa fa-minus"></span> {{'ALERT.EDIT.REMOVE'|translate}}</button></span>
                                 </div>
                             </div>
                         </div>
+                    </div>
+                    <div class="col-xs-3">
+                        <div style="display: table;"><button type="button" class="btn btn-default" style="float: left; margin-top:5px;" ng-click="addEmail();"><span class="fa fa-plus"></span> {{'ALERT.EDIT.ADD_EMAIL'|translate}}</button></div>
                     </div>
                 </div>
             </div>
