OPAL-469 - finished delete alert section.

--- a/templates/alert/delete.alert.html
+++ b/templates/alert/delete.alert.html
@@ -12,7 +12,7 @@
     </div>
     <div class="alert row">
         <div class="col-xs-12">
-            <p ng-bind-html="alertToDelete.code + ' - ' + alertToDelete.title"></p>
+            <p ng-bind-html="alertToDelete.subject"></p>
         </div>
     </div>
     <div class="row">
