--- a/templates/audit/audits.html
+++ b/templates/audit/audits.html
@@ -11,7 +11,7 @@
                     <div class="row main-title">
                         <!-- Page title -->
                         <div class="col-xs-12 col-md-8 title-content">
-                            <span class="fa fa-address-card"></span>
+                            <span class="fa fa-gavel"></span>
                             <h1><strong>{{'AUDIT.LIST.TITLE'|translate}}</strong></h1>
                         </div>
                         <!-- Breadcrumbs -->
