--- a/templates/patient/menu-main.html
+++ b/templates/patient/menu-main.html
@@ -15,7 +15,7 @@
 					<div class="row main-title">
 						<!-- Page title -->
 						<div class="col-xs-12 col-md-9 title-content">
-							<span class="fa fa-pencil-square-o"></span>
+							<span class="fa fa-address-card"></span>
 							<h1><strong>{{'PATIENTS.MENU.TITLE'|translate}}</strong></h1>
 						</div>
 						<!-- Breadcrumbs -->
