--- a/templates/publication/publication.html
+++ b/templates/publication/publication.html
@@ -11,7 +11,7 @@
                     <div class="row main-title">
                         <!-- Page title -->
                         <div class="col-xs-12 col-md-6 title-content">
-                            <span class="fa fa-cloud-upload"></span>
+                            <span class="fa fa-rss"></span>
                             <h1><strong>{{'PUBLICATION.LIST.TITLE'|translate}}</strong></h1>
                         </div>
                         <!-- Breadcrumbs -->
