--- a/templates/user/add.user.html
+++ b/templates/user/add.user.html
@@ -45,6 +45,30 @@
                         </div>
 
                         <uib-accordion class="side-navbar">
+
+                            <!-- SECTION: Type -->
+                            <div uib-accordion-group class="panel-container summary-box animated">
+                                <uib-accordion-heading>
+                                    <div class="row" style="align-items: center">
+                                        <div class="col-md-2">
+                                            <span style="color:#5cb85c" class="glyphicon glyphicon-ok"></span>
+                                        </div>
+                                        <div class="col-md-8">
+                                            <strong>{{'USERS.ADD.TYPE_USER'|translate}}</strong>
+                                        </div>
+                                        <div class="col-md-2">
+                                            <i class="pull-right glyphicon"></i>
+                                        </div>
+                                    </div>
+                                </uib-accordion-heading>
+                                <div ng-if="toSubmit.type.value" class="description">
+                                    <p>
+                                        <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
+                                        {{type_name}}
+                                    </p>
+                                </div>
+                            </div>
+
                             <!-- SECTION: Username -->
                             <div uib-accordion-group is-open="usernameSection.open" class="panel-container summary-box" is-disabled="!newUser.username">
                                 <uib-accordion-heading>
@@ -144,7 +168,6 @@
                             <span><strong>{{'USERS.ADD.TITLE'|translate}}</strong></span>
                         </div>
                     </div>
-
                     <div class="row mobile-side-panel-menu">
                         <div class="back-menu col-xs-12 col-sm-5 col-lg-12">
                             <div class="panel-container animated" ng-class="{pulse: hoverBack}" ng-mouseenter="hoverBack=true" ng-mouseleave="hoverBack=false" style="cursor:pointer;" ng-click="goBack()">
@@ -175,8 +198,35 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="section-content">
+                        <!-- SECTION: Type of user -->
+                        <div class="row">
+                            <div class="col-xs-12 side-menu-title">
+                                <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
+                                    <span style="background-color:#e6edfa; padding: 0 10px;">
+                                        <span class="fas fa-dot-circle"></span>
+                                        <h2>{{'USERS.ADD.TYPE_USER'|translate}}</h2>
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-12">
+                                <p style="margin-bottom: 10px;">
+                                    <span style="color:#d9534f"><strong>{{'USERS.ADD.REQUIRED_2'|translate}}</strong></span>
+                                    {{'USERS.ADD.TYPE_USER_EXPLANATION'|translate}}
+                                </p>
+                            </div>
+                        </div>
+                        <div class="row animated" style="margin-bottom: 15px;">
+                            <div class="col-xs-12 col-sm-8">
+                                <div class="row">
+                                    <div class="col-xs-12 col-sm-6">
+                                        <select ng-model="newUser.type" class="form-control" ng-options='option.ID as option.name_display for option in userType'></select>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <!-- SECTION: Username & Password -->
                         <div class="row">
                             <div class="col-xs-12 side-menu-title">
