opal-609 - changed from cookies to sessionStorage in the frontend or it will be impossible to store more new module in the nav menu.

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -43,7 +43,7 @@
                                                 <h1>{{menu.name}}</h1>
                                             </div>
                                             <div class="panel-description">
-                                                <p>{{menu.sub|translate}}</p>
+                                                <p>{{menu.sub}}</p>
                                             </div>
                                         </div>
                                     </div>
