--- a/templates/master-source/view.masterSourceDiagnosis.html
+++ b/templates/master-source/view.masterSourceDiagnosis.html
@@ -3,12 +3,12 @@
     <div class="col-xs-12 col-md-6">
         <h2 class="modal-title">
             <span class="fa fa-eye"></span>
-            {{'CUSTOM_CODE.EDIT.TITLE_VIEW'|translate}}
+            {{'MASTER_SOURCE_MODULE.DIAGNOSIS_EDIT.TITLE_VIEW'|translate}}
         </h2>
-        <p ng-if="locked" class="text-danger">{{'CUSTOM_CODE.EDIT.LOCKED'|translate}}</p>
+        <p ng-if="readOnly.name_display" class="text-danger">{{'MASTER_SOURCE_MODULE.DIAGNOSIS_EDIT.USED'|translate}} {{readOnly.name_display}}</p>
     </div>
     <div class="modal-buttons col-xs-12 col-md-6">
-        <input ng-click="cancel()" class="btn btn-danger cancel" type="button" value="{{'CUSTOM_CODE.EDIT.CLOSE'|translate}}">
+        <input ng-click="cancel()" class="btn btn-danger cancel" type="button" value="{{'MASTER_SOURCE_MODULE.DIAGNOSIS_EDIT.CLOSE'|translate}}">
     </div>
 </div>
 <div class="modal-body">
@@ -17,15 +17,18 @@
         <div uib-accordion-group is-open="generalSection.open">
             <uib-accordion-heading>
                 <div>
-                    <strong>{{'CUSTOM_CODE.EDIT.GENERAL'|translate}} </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': generalSection.open, 'glyphicon-chevron-right': !generalSection.open}"></i>
+                    <strong>{{'MASTER_SOURCE_MODULE.DIAGNOSIS_EDIT.GENERAL'|translate}} </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': generalSection.open, 'glyphicon-chevron-right': !generalSection.open}"></i>
                 </div>
             </uib-accordion-heading>
             <div class="row">
                 <div class="col-xs-12">
-                    <label><strong>{{'CUSTOM_CODE.EDIT.MODULE'|translate}}</strong></label> : {{generalInfo.module_display}}
+                    <label><strong>{{'MASTER_SOURCE_MODULE.DIAGNOSIS_EDIT.EXTERNAL_ID'|translate}}</strong></label> : {{readOnly.externalId}}
+                </div>
+                <div class="col-xs-12">
+                    <label><strong>{{'MASTER_SOURCE_MODULE.DIAGNOSIS_EDIT.SOURCE'|translate}}</strong></label> : {{readOnly.SourceDatabaseName}}
                 </div>
                 <div ng-if="generalInfo.type_display" class="col-xs-12">
-                    <label><strong>{{'CUSTOM_CODE.EDIT.TYPE'|translate}}</strong></label> : {{generalInfo.type_display}}
+                    <label><strong>{{'MASTER_SOURCE_MODULE.DIAGNOSIS_EDIT.TYPE'|translate}}</strong></label> : {{readOnly.type_display}}
                 </div>
             </div>
         </div>
@@ -33,16 +36,16 @@
         <div uib-accordion-group is-open="titleSection.open">
             <uib-accordion-heading>
                 <div>
-                    <strong>{{'CUSTOM_CODE.EDIT.DETAILS'|translate}}</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': titleSection.open, 'glyphicon-chevron-right': !titleSection.open}"></i>
+                    <strong>{{'MASTER_SOURCE_MODULE.DIAGNOSIS_EDIT.DETAILS'|translate}}</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': titleSection.open, 'glyphicon-chevron-right': !titleSection.open}"></i>
                 </div>
             </uib-accordion-heading>
 
             <div class="row">
                 <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
-                    <p><strong>{{'CUSTOM_CODE.EDIT.CODE'|translate}}</strong>: {{toSubmit.details.code}}</p>
+                    <p><strong>{{'MASTER_SOURCE_MODULE.DIAGNOSIS_EDIT.CODE'|translate}}</strong>: {{toSubmit.details.code}}</p>
                 </div>
                 <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
-                    <p><strong>{{'CUSTOM_CODE.EDIT.DESCRIPTION'|translate}}</strong>: {{toSubmit.details.description}}</p>
+                    <p><strong>{{'MASTER_SOURCE_MODULE.DIAGNOSIS_EDIT.DESCRIPTION'|translate}}</strong>: {{toSubmit.details.description}}</p>
                 </div>
             </div>
         </div>
