--- a/templates/patient/patient-report.html
+++ b/templates/patient/patient-report.html
@@ -19,15 +19,24 @@
                             <span><a ui-sref="home">{{'BREADCRUMBS.HOME'|translate}}</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <strong>{{'PATIENTS.LIST.TITLE'|translate}}</strong></span>
                         </div>
                     </div>
-
-                    <!-- Load main table -->
-                    <div class="iframe-container">
-                        <iframe id="serviceFrameSend" src="patientReport/public_html/index.html" class="responsive-iframe">
-                        </iframe>
+                    <div>
+                    <h1>Generate Opal Reports</h1>
+                        <div id="tab" class="tab">
+                            <button class="tablinks" ng-click="goToIndividual();">Individual Patient Reports</button>
+                            <button class="tablinks" ng-click="goToGroup();">Group Patient Reports</button>
+                        </div>
                     </div>
+                        
+                    <!-- Load main table -->
+                    <!--<div class="iframe-container">
+                        <iframe id="serviceFrameSend" src="templates/patient-report/main-report.html" class="responsive-iframe">
+                        </iframe>
+                    </div>-->
                 </div>
             </div>
         </div>
     </div>
     <div class="bannerMessage alert-success">{{bannerMessage}}</div>
 </div>
+
+
