--- a/templates/patient/patient-report.html
+++ b/templates/patient/patient-report.html
@@ -19,13 +19,64 @@
                             <span><a ui-sref="home">{{'BREADCRUMBS.HOME'|translate}}</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <strong>{{'PATIENTS.LIST.TITLE'|translate}}</strong></span>
                         </div>
                     </div>
-                    <div>
-                    <h1>Generate Opal Reports</h1>
-                        <div id="tab" class="tab">
-                            <button class="tablinks" ng-click="goToIndividual();">Individual Patient Reports</button>
-                            <button class="tablinks" ng-click="goToGroup();">Group Patient Reports</button>
-                        </div>
+                    <div class="row" style="text-align:left;">
+						<div class="col-xs-12 side-menu-title">
+							<div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
+                				<span style="background-color:#e6edfa; padding: 0 10px;">
+									<span class="glyphicon glyphicon-menu-down"></span>
+                                    <!--<h2>{{'PATIENTS.MENU.SUB_TITLE'|translate}}</h2>-->
+                                    <h2>Generate Opal Patient Reports</h2>
+                                </span>
+							</div>
+						</div>
                     </div>
+                    <div class="row">
+                        <a href="" target="_blank">
+                            <div class="panel-container animated" style="width:40%;" ng-click="goToIndividual();" style="cursor:pointer;">
+                                <div class="panel-info">
+                                    <div class="panel-content">
+                                        <div class="icon-home clearfix">
+                                            <span class="fa fa-user-plus"></span>
+                                        </div>
+                                        <div class="panel-title">
+                                            <!-- <h1>{{'PATIENTS.MENU.REGISTRATION'|translate}}</h1> -->
+                                            <h1>Individual Report</h1>
+                                        </div>
+                                        <div class="panel-description">
+                                           <!-- <p>{{'PATIENTS.MENU.REGISTRATION_SUB'|translate}}</p> -->
+                                           <p>Used for individual patient statistics</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="" target="_blank">
+                            <div class="panel-container animated" style="width:40%;" ng-click="goToGroup();" style="cursor:pointer;">
+                                <div class="panel-info">
+                                    <div class="panel-content">
+                                        <div class="icon-home clearfix">
+                                            <span class="fa fa-user-plus"></span>
+                                        </div>
+                                        <div class="panel-title">
+                                            <!-- <h1>{{'PATIENTS.MENU.REGISTRATION'|translate}}</h1> -->
+                                            <h1>Group Report</h1>
+                                        </div>
+                                        <div class="panel-description">
+                                           <!-- <p>{{'PATIENTS.MENU.REGISTRATION_SUB'|translate}}</p> -->
+                                           <p>Used for individual patient statistics</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                        
+                    </div>
+                    
+                       <!-- <h1>Generate Opal Reports</h1>
+                        <div id="tab" class="tab">
+                           <span class="col-xs-12 col-sm-6 col-md-4 ng-scope"><button class="tablinks" ng-click="goToIndividual();">Individual Patient Reports</button></span>
+                            <button class="tablinks" ng-click="goToGroup();">Group Patient Reports</button>
+                        </div>-->
                         
                     <!-- Load main table -->
                     <!--<div class="iframe-container">
